--- a/CA02/views/chatResponse1.ejs
+++ b/CA02/views/chatResponse1.ejs
@@ -4,5 +4,5 @@
         <div style="border:thin solid black"><%=answer%></div>
         Here is the answer in "pre" mode:
         <pre style="border:thin solid black"><%=answer%></pre>
-        <a href="/chat"}>Translate something else</a>
+        <a href="/chat1"}>Translate something else</a>
   </div>
