--- a/CA02/views/layout.ejs
+++ b/CA02/views/layout.ejs
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CS103a app</title>
+    <title>2023CS103 Team Project
+      By Yuxuan Xiong and Weixuan Zhang
+    </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
@@ -37,6 +39,14 @@
 
                 <li class="nav-item">
                   <a class="nav-link" href="/todo">To do list</a>
+                </li>
+
+                <li class="nav-item">
+                  <a class="nav-link" href="/chat1">method by Weixuan Zhang</a>
+                </li>
+
+                <li class="nav-item">
+                  <a class="nav-link" href="/chat">method by Yuxuan Xiong</a>
                 </li>
 
                 <li class="nav-item">
