--- a/CA02/views/chat1.ejs
+++ b/CA02/views/chat1.ejs
@@ -1,5 +1,5 @@
 <div class="container my-5">
-    <h1 class="display-3 my-title"><b>Translate to Chinese</b></h1>
+    <h1 class="display-3 my-title"><b>You can know the auspicious and inauspicious activities according to the Chinese Huangli calendar for a specific date:</b></h1>
     <form action="/chat1" method="post">
         <div class="mb-3">
             <label for="code" class="form-label">Text:</label>
