--- a/CA02/views/chat.ejs
+++ b/CA02/views/chat.ejs
@@ -1,5 +1,7 @@
 <div class="container my-5">
-    <h1 class="display-3 my-title"><b>Translate to Chinese</b></h1>
+    <h1 class="display-3 my-title"><b>Here is a advisor played by ChatGpt,
+        when you want to add something into the todo list you can ask chatgpt to give you some advise,
+        then you will have a better view of doing this thing!</b></h1>
     <form action="/chat" method="post">
         <div class="mb-3">
             <label for="code" class="form-label">Text:</label>
