--- a/CA02/views/chatResponse.ejs
+++ b/CA02/views/chatResponse.ejs
@@ -1,8 +1,9 @@
 <div class="container my-5">
-    <h1>Translating to Chinese</h1>
-        Here is the answer in text mode:
-        <div style="border:thin solid black"><%=answer%></div>
-        Here is the answer in "pre" mode:
+    <h1>Here is a advisor played by ChatGpt,
+        when you want to add something into the todo list you can ask chatgpt to give you some advise,
+        then you will have a better view of doing this thing!
+    </h1>
+        Here is the answer:
         <pre style="border:thin solid black"><%=answer%></pre>
-        <a href="/chat"}>Translate something else</a>
+        <a href="/chat"}>asking another difficult thinghs to chatgpt</a>
   </div>
