--- a/CA02/views/about.ejs
+++ b/CA02/views/about.ejs
@@ -1,46 +1,5 @@
 <h1>About the app</h1>
-<p class="bg-info text-danger">This is a demo app</p>
-
-
-    <div class="row">
-      <div class="col bg-primary">
-        Column A
-        <img src="/images/zipline2019.jpg" width="100%">
-      </div>
-      <div class="col bg-info">
-        Column B
-        This is a photo from a zipline in CT
-        This is a photo from a zipline in CT
-        This is a photo from a zipline in CT
-        This is a photo from a zipline in CT
-        This is a photo from a zipline in CT
-        This is a photo from a zipline in CT
-        This is a photo from a zipline in CT
-        This is a photo from a zipline in CT
-        This is a photo from a zipline in CT
-      </div>    
-      <div class="col bg-danger">
-        Column C
-        <img src="" width="100%">
-      </div>
-    </div>
-
-    <div class="row">
-        <div class="col bg-info">
-            Column B
-            This is a photo from a zipline in CT
-            This is a photo from a zipline in CT
-            This is a photo from a zipline in CT
-            This is a photo from a zipline in CT
-            This is a photo from a zipline in CT
-            This is a photo from a zipline in CT
-            This is a photo from a zipline in CT
-            This is a photo from a zipline in CT
-            This is a photo from a zipline in CT
-          </div>    
-        <div class="col bg-primary">
-          Column A
-          <img src="/images/zipline2019.jpg" width="100%">
-        </div>
-
-      </div>
+<p class="bg-info text-danger">This the about page
+  in this program, we have the todo list, and if the user want to input something,
+  the user can choose to ask chatgpt whethert whether it is the right to day to do this things according to Chinese special date caculation.
+  and also the User can choose to take some advises from ChatGpt;</p>
