--- a/CA02/views/layout.ejs
+++ b/CA02/views/layout.ejs
@@ -38,6 +38,10 @@
                 </li>
 
                 <li class="nav-item">
+                  <a class="nav-link" href="/team">team page</a>
+                </li>
+
+                <li class="nav-item">
                   <a class="nav-link" href="/todo">To do list</a>
                 </li>
 
